[package]
name = "tarkov_pricing_overlay"
version = "2.0.0"
authors = ["John Schmidt <john@john2143.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11", features=["blocking", "json", "multipart", "stream"] }
image = "0.24.7"
inputbot = "0.6.0"
once_cell = "1.19.0"
libc = "0.2.152"
scrap = "0.5.0"
base64 = "0.21.5"
serde = {version="1.0.195", features=["derive"] }
serde_json = "1.0.111"
num-format = "0.4.4"
rayon = "1.8.0"
druid = "0.8.3"
ocrs = "0.3.1"
rten-imageio = "0.1.0"
rten-tensor = "0.1.0"
