[package]
name = "tarkov_pricing_overlay"
version = "2.0.0"
authors = ["John Schmidt <john@john2143.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.12", features=["blocking", "json", "multipart", "stream"] }
image = "0.25.2"
inputbot = { version = "0.6.0", optional = true }
once_cell = "1.19.0"
libc = { version = "0.2.158", optional = true }
scrap = { version = "0.5.0", optional = true }
serde = { version="1.0.209", features=["derive"] }
serde_json = "1.0.127"
num-format = "0.4.4"
rayon = "1.10.0"
ocrs = "0.8.1"
#rten-imageio = "0.1.0"
rten-tensor = "0.13.1"
rten = "0.13.1"
colored = "2.1.0"
clap = { version = "4.5.16", features = ["derive"] }

[features]
input = ["dep:inputbot", "dep:scrap", "dep:libc"]
default = ["input"]
